# django_codebase

./: Dockerfile  README.es.md  README.md  celerybeat-schedule  docker-compose.yml  pylintrc  pyproject.toml
apps/base/: db_router.py  models.py  pagination.py
apps/testing/: admin.py  apps.py  filters.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/testing/migrations/: 0001_initial.py
config/: celery.py  settings-dev.py  settings.py  urls.py
prod/: Dockerfile  docker-compose.yml
requirements/: base.txt  dev.txt
scripts/: pre-commit.sh
